--- a/server/rust/Cargo.toml
+++ b/server/rust/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_server"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
@@ -8,6 +8,8 @@ warp = "0.3"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.4"
+gethostname = "0.4"
 
 [profile.release]
 opt-level = 2
